--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/windface.png" />
+    <link rel="icon" type="image/png" href="/chartemoji.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Title of project</title>
+    <title>Meat consumption and wealth</title>
   </head>
   <body>
     <div id="app"></div>
