--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/chartemoji.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Meat consumption and wealth</title>
+    <title>60 days</title>
   </head>
   <body>
     <div id="app"></div>
