--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/icon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>60 days</title>
+    <title>Starting on a high note: 60 days of morning soundtracks</title>
   </head>
   <body>
     <div id="app"></div>
